2024-12-31         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Update for version 1.1.2.
	* configure.ac (AC_INIT): Bump version to 1.1.2.
	* Makefile.am (xml_enc_converted.touch): Pass AWK=$(GAWKPROG) in the
	environment.
	* xml-conv-enc: Remove bogus logic to find an awk program, and
	instead use the $AWK environment variable, which will be set to
	$(GAWKPROG) by the Makefile.

2018-03-30         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Update for version 1.1.1.
	* configure.ac (AC_INIT): Bump version to 1.1.1.

2017-11-25         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Fix typo.

2017-11-19         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Update for version 1.1.0.
	* configure.ac (AC_INIT): Bump version to 1.1.0.
	* xml_interface.c (xml_get_record): If API version 2 or later, must
	add the new field_width argument. In the declaration, populate the
	VERSIOn attribute as user input instead of a string, since it should
	be a strnum.
	(take_control_of): Replace emalloc+memset with ezalloc for slightly
	improved performance.
	(update_xmlattr): Populate the attribute values as user input instead
	of strings, so numeric strings will now be treated as strnums.

2017-10-03         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Update for version 1.0.7.
	* configure.ac (AC_INIT): Bump version to 1.0.7.

2017-09-03         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Update for version 1.0.6.
	* configure.ac (AC_INIT): Bump version to 1.0.6.

2017-08-21         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* xml_puller.c, xml_puller.h: Update copyright comment at top to remove
	obsolete references to GAWK and GPL v2. Everything is now GPL v3.

2017-06-01         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Update for version 1.0.5.
	* configure.ac (AC_INIT): Bump version to 1.0.5.
